# Google-Tasks-Gnome-Extensions

./: .gitignore  CHANGELOG.md  PRIVACY.md  README.md  install.sh  meson.build  metadata.json
docs/: ANALISIS.md  GUIA_GOOGLE_CLOUD.md  PLAN_DE_ACCION.md
po/: en.po  fr.po  google-tasks-extension.pot  meson.build
po/en/LC_MESSAGES/: google-tasks-extension.mo
schemas/: gschemas.compiled  org.gnome.shell.extensions.google-tasks.gschema.xml
src/: extension.js  googleTasksApi.js  oauthManager.js  prefs.js  stylesheet.css  taskItemWidget.js  taskListWidget.js  utils.js
